--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "wp-plugin-dictator/wp-plugin-dictator",
   "description": "Dictate which plugins should be active/inactive in a given environment",
   "type": "wordpress-plugin",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "authors": [
     {
       "name": "Ryan Kanner"
@@ -13,7 +13,7 @@
   },
   "autoload": {
     "psr-4": {
-      "WPQueueTasks\\": "src/"
+      "WPPluginDictator\\": "src/"
     },
     "classmap": [
       "src/"
